--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,22 @@ spring:
   servlet:
     multipart:
       max-file-size: 20MB
-      max-request-size: 20MB  
+      max-request-size: 20MB
+  mail:
+    default-encoding: UTF-8
+    protocol: smtp
+    host: ${spring.mail.host}
+    port: ${spring.mail.port}
+    username: ${spring.mail.username}
+    password: ${spring.mail.password}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+  tymeleaf:
+    check-template-location: false
 cloud:
   aws:
     stack:
